--- a/package.json
+++ b/package.json
@@ -9,17 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^5.1.1",
+    "@react-three/drei": "^9.80.0",
+    "@react-three/fiber": "^8.13.6",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "cloudinary": "^1.40.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.13.2",
+    "maath": "^0.7.0",
     "next": "13.4.12",
+    "openai": "^3.3.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
+    "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "three": "^0.154.0",
+    "typescript": "5.1.6",
+    "valtio": "^1.11.1"
+  },
+  "devDependencies": {
+    "@types/react-color": "^3.0.6",
+    "eslint-plugin-valtio": "^0.6.2",
+    "prisma": "^5.1.1"
   }
 }
